[package]
name = "dl-clip"
version = "0.1.0"
edition = "2021"
# Should fix issue with GH action failing to build
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "6.0.0"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
